--- a/sources/less/includes/apps_table.less
+++ b/sources/less/includes/apps_table.less
@@ -1,5 +1,5 @@
 .apps-grid {
-  margin: -25px -30px;
+  margin: -2.5rem -3rem;
 
   &.active {
     .apps-grid__row_extra {
@@ -33,7 +33,7 @@
 }
 
 .apps-grid__row_header {
-  min-height: 50px;
+  min-height: 5rem;
   border-bottom: 1px solid #f8fafb;
   color: @gray;
 }
@@ -61,12 +61,12 @@
 
   &:last-child {
     border-bottom: none;
-    border-radius: 0 0 7px 7px;
+    border-radius: 0 0 0.7rem 0.7rem;
   }
 
   .apps-grid__section {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
 
@@ -74,7 +74,7 @@
   display: table-cell;
   vertical-align: middle;
   box-sizing: border-box;
-  padding: 10px 15px;
+  padding: 1rem 1.5rem;
 }
 
 .apps-grid__section_name {
