--- a/sources/less/includes/badge.less
+++ b/sources/less/includes/badge.less
@@ -2,13 +2,13 @@
   box-sizing: border-box;
   display: inline-block;
   vertical-align: middle;
-  height: 19px;
-  min-width: 19px;
-  line-height: 19px;
-  padding: 0 5px;
-  border-radius: 20px;
+  height: 1.9rem;
+  min-width: 1.9rem;
+  line-height: 1.9rem;
+  padding: 0 0.5rem;
+  border-radius: 2rem;
   text-align: center;
-  font-size: 12px;
+  font-size: 1.2rem;
   background: #f2f5f7;
 }
 
@@ -18,10 +18,10 @@
 }
 
 .badge_md {
-  min-width: 32px;
-  height: 32px;
-  line-height: 32px;
-  padding: 0 12px;
-  font-size: 13px;
+  min-width: 3.2rem;
+  height: 3.2rem;
+  line-height: 3.2rem;
+  padding: 0 1.2rem;
+  font-size: 1.3rem;
   font-weight: normal;
 }
