--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -3,26 +3,26 @@
   box-sizing: border-box;
   line-height: 1;
   margin: 0;
-  padding: 12px 18px;
+  padding: 1.2rem 1.8rem;
   text-transform: uppercase;
   border: 1px solid transparent;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   white-space: nowrap;
   text-decoration: none !important;
   font-weight: bold;
-  font-size: 14px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  font-size: 1.4rem;
+  box-shadow: 0 0 1rem rgba(0,0,0,0.15);
   background-color: transparent;
   cursor: pointer;
   outline: none;
   transition: all 0.2s ease;
 
   .icon {
-    margin-right: 5px;
+    margin-right: 0.5rem;
   }
 
   .badge {
-    margin-left: 5px;
+    margin-left: 0.5rem;
   }
 }
 
@@ -91,27 +91,27 @@
 }
 
 .button_submit {
-  padding-left: 55px;
-  padding-right: 55px;
+  padding-left: 5.5rem;
+  padding-right: 5.5rem;
 }
 
 .button_small {
-  min-height: 34px;
-  padding: 7px 10px;
-  font-size: 13px;
+  min-height: 3.4rem;
+  padding: 0.7rem 1rem;
+  font-size: 1.3rem;
   font-weight: normal;
   text-transform: capitalize;
 }
 
 .button_sm {
-  padding: 9px 20px;
-  font-size: 12px;
+  padding: 0.9rem 2rem;
+  font-size: 1.2rem;
 }
 
 .button_md {
-  padding-top: 17px;
-  padding-bottom: 17px;
-  font-size: 14px;
+  padding-top: 1.7rem;
+  padding-bottom: 1.7rem;
+  font-size: 1.4rem;
 }
 
 .button__text {
@@ -122,9 +122,9 @@
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  margin-right: 5px;
-  width: 14px;
-  height: 14px;
+  margin-right: 0.5rem;
+  width: 1.4rem;
+  height: 1.4rem;
 
   .icon {
     position: absolute;
