--- a/sources/less/includes/collapsed.less
+++ b/sources/less/includes/collapsed.less
@@ -1,5 +1,5 @@
 .collapsed {
-  padding: 0 0 0 20px;
+  padding: 0 0 0 2rem;
 
   &.active {
     .collapsed__content {
@@ -17,7 +17,7 @@
   }
 
   + .collapsed {
-    margin-top: 10px;
+    margin-top: 1rem;
   }
 
   .icon_cursor_down {
@@ -32,22 +32,22 @@
 .collapsed__toggler {
   position: absolute;
   top: 50%;
-  left: -20px;
-  width: 20px;
-  height: 20px;
-  margin: -10px 0 0;
+  left: -2rem;
+  width: 2rem;
+  height: 2rem;
+  margin: -1rem 0 0;
   cursor: pointer;
 
   .icon {
     position: absolute;
     top: 50%;
     left: 0;
-    margin: -4.5px 0 0;
+    margin: -0.45rem 0 0;
   }
 }
 
 .collapsed__content {
   display: none;
-  margin: 10px 0 0;
-  padding: 0 0 0 30px;
+  margin: 1rem 0 0;
+  padding: 0 0 0 3rem;
 }
