--- a/sources/less/includes/collapsed_panel.less
+++ b/sources/less/includes/collapsed_panel.less
@@ -24,14 +24,14 @@
 
 .collapsed-panel__header {
   position: relative;
-  padding: 20px 30px;
+  padding: 2rem 3rem;
   cursor: pointer;
 
   .icon_cursor {
     position: absolute;
-    right: 20px;
+    right: 2rem;
     top: 50%;
-    margin-top: -4.5px;
+    margin-top: -0.45rem;
   }
 
   .icon_cursor_down {
@@ -45,5 +45,5 @@
   left: 0;
   right: 0;
   visibility: hidden;
-  padding: 0 30px 25px;
+  padding: 0 3rem 2.5rem;
 }
