--- a/sources/less/includes/copy.less
+++ b/sources/less/includes/copy.less
@@ -1,5 +1,5 @@
 .copy {
-  font-size: 13px;
+  font-size: 1.3rem;
   color: @gray;
 
   a {
@@ -8,12 +8,12 @@
 
   ul {
     list-style-type: none;
-    margin: 0 0 20px;
+    margin: 0 0 2rem;
     padding: 0;
   }
 
   li {
-    margin: 0 0 10px;
+    margin: 0 0 1rem;
 
     &:last-child {
       margin-bottom: 0;
