--- a/sources/less/includes/datepicker.less
+++ b/sources/less/includes/datepicker.less
@@ -5,7 +5,7 @@
   }
 
   .rd-month-label {
-    margin-bottom: 25px;
+    margin-bottom: 2.5rem;
     font-weight: bold;
   }
 
@@ -17,12 +17,12 @@
 
   .rd-day-body,
   .rd-day-head {
-    min-width: 30px;
-    height: 30px;
+    min-width: 3rem;
+    height: 3rem;
   }
 
   .rd-day-selected {
-    border-radius: 30px;
+    border-radius: 3rem;
     background: @blue;
 
     &.rd-day-disabled {
