--- a/sources/less/includes/daterange.less
+++ b/sources/less/includes/daterange.less
@@ -10,17 +10,17 @@
 }
 
 .daterange__ctrl_left {
-  padding-right: 25px;
+  padding-right: 2.5rem;
   border-right: 1px solid @menu-hover-color;
   margin-right: -1px;
 }
 
 .daterange__ctrl_right {
-  padding-left: 25px;
+  padding-left: 2.5rem;
   border-left: 1px solid @menu-hover-color;
 }
 
 .daterange__actions {
-  margin: 20px 0 0;
+  margin: 2rem 0 0;
   text-align: center;
 }
