--- a/sources/less/includes/dialog.less
+++ b/sources/less/includes/dialog.less
@@ -1,22 +1,22 @@
 .dialog {
   &:extend(.panel);
   display: inline-block;
-  padding: 60px 70px 40px;
-  box-shadow: 0 0 50px rgba(0,0,0,0.25);
+  padding: 6rem 7rem 4rem;
+  box-shadow: 0 0 5rem rgba(0,0,0,0.25);
 
   .button {
-    min-width: 160px;
+    min-width: 16rem;
   }
 }
 
 .dialog__title {
-  margin: 0 0 40px;
-  font-size: 18px;
+  margin: 0 0 4rem;
+  font-size: 1.8rem;
   font-weight: 500;
 }
 
 .dialog__action {
-  margin: 0 0 30px;
+  margin: 0 0 3rem;
 
   &:last-child {
     margin-bottom: 0;
