--- a/sources/less/includes/get_started_progress.less
+++ b/sources/less/includes/get_started_progress.less
@@ -1,16 +1,16 @@
 .get-started-progress {
   display: inline-block;
   vertical-align: top;
-  height: 80px;
-  padding: 0 20px;
+  height: 8rem;
+  padding: 0 2rem;
   line-height: 1;
-  font-size: 12px;
+  font-size: 1.2rem;
   text-transform: uppercase;
   background: @black;
   color: #fff;
 
   .inline__item {
-    margin: 0 8px;
+    margin: 0 0.8rem;
   }
 }
 
@@ -19,9 +19,9 @@
 }
 
 .get-started-progress__title {
-  margin-top: 35px;
+  margin-top: 3.5rem;
 }
 
 .get-started-progress__status {
-  margin-top: 13px;
+  margin-top: 1.3rem;
 }
