--- a/sources/less/includes/grid.less
+++ b/sources/less/includes/grid.less
@@ -1,5 +1,5 @@
 .grid {
-  margin: -10px -10px 10px;
+  margin: -1rem -1rem 1rem;
 
   &:after {
     content: '';
@@ -45,5 +45,5 @@
 .grid__section {
   box-sizing: border-box;
   float: left;
-  padding: 10px;
+  padding: 1rem;
 }
