--- a/sources/less/includes/indicator.less
+++ b/sources/less/includes/indicator.less
@@ -1,13 +1,13 @@
 .indicator__value {
-  margin: 0 0 20px;
+  margin: 0 0 2rem;
   line-height: 1;
-  font-size: 42px;
+  font-size: 4.2rem;
   font-weight: 300;
 }
 
 .indicator__value_small {
-  margin-bottom: 12px;
-  font-size: 20px;
+  margin-bottom: 1.2rem;
+  font-size: 2rem;
   font-weight: 500;
 }
 
