--- a/sources/less/includes/inline.less
+++ b/sources/less/includes/inline.less
@@ -1,43 +1,43 @@
 .inline {
   display: inline-block;
   vertical-align: middle;
-  margin-top: -13px;
-  margin-bottom: -13px;
+  margin-top: -1.3rem;
+  margin-bottom: -1.3rem;
 }
 
 .inline_size_xs {
-  margin-top: -2px;
-  margin-bottom: -2px;
+  margin-top: -0.2rem;
+  margin-bottom: -0.2rem;
 
   .inline__item {
-    padding: 2px;
+    padding: 0.2rem;
   }
 }
 
 .inline_size_sm {
-  margin-top: -4px;
-  margin-bottom: -4px;
+  margin-top: -0.4rem;
+  margin-bottom: -0.4rem;
 
   .inline__item {
-    padding: 4px;
+    padding: 0.4rem;
   }
 }
 
 .inline_size_md {
-  margin-top: -8px;
-  margin-bottom: -8px;
+  margin-top: -0.8rem;
+  margin-bottom: -0.8rem;
 
   .inline__item {
-    padding: 8px;
+    padding: 0.8rem;
   }
 }
 
 .inline_size_lg {
-  margin-top: -20px;
-  margin-bottom: -20px;
+  margin-top: -2rem;
+  margin-bottom: -2rem;
 
   .inline__item {
-    padding: 20px;
+    padding: 2rem;
   }
 }
 
@@ -57,7 +57,7 @@
 .inline__item {
   display: inline-block;
   vertical-align: middle;
-  padding: 13px;
+  padding: 1.3rem;
 
   &:first-child {
     margin-left: 0!important;
