--- a/sources/less/includes/logo.less
+++ b/sources/less/includes/logo.less
@@ -1,8 +1,8 @@
 .logo {
   display: inline-block;
   vertical-align: top;
-  width: 152px;
-  height: 45px;
+  width: 15.2rem;
+  height: 4.5rem;
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
