--- a/sources/less/includes/logout_button.less
+++ b/sources/less/includes/logout_button.less
@@ -1,7 +1,7 @@
 .logout-button {
   display: inline-block;
   vertical-align: middle;
-  height: 80px;
-  width: 80px;
+  height: 8rem;
+  width: 8rem;
   background: data-uri('../img/icon_logout.png') center center no-repeat;
 }
