--- a/sources/less/includes/menu.less
+++ b/sources/less/includes/menu.less
@@ -10,7 +10,7 @@
   position: relative;
   z-index: 0;
   display: block;
-  padding: 0 0 0 70px;
+  padding: 0 0 0 7rem;
   transition: background 0.2s ease;
 
   &:after {
@@ -68,15 +68,15 @@
   position: relative;
   z-index: 0;
   display: block;
-  margin: 0 0 0 -70px;
-  padding: 18px 0 18px 70px;
+  margin: 0 0 0 -7rem;
+  padding: 1.8rem 0 1.8rem 7rem;
   color: @black;
 
   .menu-icon {
     position: absolute;
-    left: 30px;
+    left: 3rem;
     top: 50%;
-    margin-top: -11px;
+    margin-top: -1.1rem;
 
     &:before {
       display: none;
@@ -86,13 +86,13 @@
   .icon_cursor {
     position: absolute;
     top: 50%;
-    right: 20px;
-    margin: -4.5px 0 0;
+    right: 2rem;
+    margin: -0.45rem 0 0;
   }
 }
 
 .menu-item__info {
-  margin: 0 0 15px;
+  margin: 0 0 1.5rem;
   color: @gray;
 
   strong {
@@ -103,14 +103,14 @@
 
 .sub-menu {
   overflow: hidden;
-  margin-left: -70px;
-  padding: 10px 0;
+  margin-left: -7rem;
+  padding: 1rem 0;
   background: @menu-hover-color;
 }
 
 .sub-menu__item {
   display: block;
-  padding: 10px 0 10px 70px;
+  padding: 1rem 0 1rem 7rem;
   color: @black;
 }
 
