--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -3,8 +3,8 @@
   z-index: 0;
   display: inline-block;
   vertical-align: middle;
-  width: 21px;
-  height: 21px;
+  width: 2.1rem;
+  height: 2.1rem;
 
   &:after,
   &:before {
@@ -89,8 +89,8 @@
 }
 
 .menu-icon_user {
-  width: 24px;
-  height: 24px;
+  width: 2.4rem;
+  height: 2.4rem;
 
   &:after {
     background-image: data-uri('../img/icon_user_gray.png');
