--- a/sources/less/includes/nav.less
+++ b/sources/less/includes/nav.less
@@ -1,8 +1,8 @@
 .nav {
   display: inline-block;
   vertical-align: top;
-  height: 80px;
-  line-height: 80px;
+  height: 8rem;
+  line-height: 8rem;
   text-transform: uppercase;
 
   a {
@@ -13,7 +13,7 @@
 .nav__item {
   position: relative;
   display: inline-block;
-  padding: 0 18px;
+  padding: 0 1.8rem;
   color: @black;
 }
 
@@ -26,7 +26,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 2px;
+    height: 0.2rem;
     width: 100%;
     background: @blue;
   }
@@ -38,7 +38,7 @@
   right: 0;
   display: none;
   box-sizing: border-box;
-  width: 80px;
+  width: 8rem;
   text-align: center;
 
   @media (max-width: 1279px) {
