--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -1,7 +1,7 @@
 .panel {
-  padding: 25px 30px;
-  border-radius: 8px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.15);
+  padding: 2.5rem 3rem;
+  border-radius: 0.8rem;
+  box-shadow: 0 0 0.5rem rgba(0,0,0,0.15);
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: bottom right;
@@ -10,12 +10,12 @@
 }
 
 .panel_md {
-  padding: 15px;
+  padding: 1.5rem;
 
   .panel__footer {
-    margin: 15px -15px -15px;
-    padding: 15px;
-    font-size: 13px;
+    margin: 1.5rem -1.5rem -1.5rem;
+    padding: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -36,35 +36,35 @@
 }
 
 .panel_popover {
-  box-shadow: 0 0 30px rgba(0,0,0,0.1);
+  box-shadow: 0 0 3rem rgba(0,0,0,0.1);
 }
 
 .panel_settings {
   .panel__title {
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
   }
 
   .panel__section {
-    margin-bottom: 25px;
+    margin-bottom: 2.5rem;
   }
 
   .checkbox {
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
   }
 
   .checkbox__ctrl {
-    margin-right: 10px;
+    margin-right: 1rem;
   }
 }
 
 .panel__title {
-  margin: 0 0 25px;
-  font-size: 15px;
+  margin: 0 0 2.5rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 .panel__section {
-  margin: 0 0 50px;
+  margin: 0 0 5rem;
 
   &:last-child {
     margin-bottom: 0;
@@ -72,9 +72,9 @@
 }
 
 .panel__footer {
-  margin: 25px -30px -25px;
-  padding: 25px 30px;
-  border-radius: 0 0 7px 7px;
+  margin: 2.5rem -3rem -2.5rem;
+  padding: 2.5rem 3rem;
+  border-radius: 0 0 0.7rem 0.7rem;
   background: #f8fafb;
   color: @gray;
 }
