--- a/sources/less/includes/popover.less
+++ b/sources/less/includes/popover.less
@@ -40,21 +40,21 @@
   top: -99999px;
   left: -99999px;
   transform: translateX(-50%);
-  margin: 10px 0 0;
+  margin: 1rem 0 0;
   transition: opacity 0.2s ease, left 0s linear 0.2s, top 0s linear 0.2s;
 }
 
 .popover__content_bottom-right {
   top: -99999px;
   right: 99999px;
-  margin: 10px 0 0;
+  margin: 1rem 0 0;
   transition: opacity 0.2s ease, right 0s linear 0.2s, top 0s linear 0.2s;
 }
 
 .popover__content_bottom-left {
   top: -99999px;
   left: -999999px;
-  margin: 10px 0 0;
+  margin: 1rem 0 0;
   transition: opacity 0.2s ease, left 0s linear 0.2s, top 0s linear 0.2s;
 }
 
