--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -1,18 +1,20 @@
+// TODO: Рефакторинг
+
 .select2-container--default .select2-selection--single {
-  height: 50px;
-  border-radius: 8px;
+  height: 5rem;
+  border-radius: 0.8rem;
   border-color: #e6e9ed;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
-  line-height: 48px;
-  padding-left: 20px;
-  padding-right: 20px;
+  line-height: 4.8rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-  height: 48px;
-  width: 49px;
+  height: 4.8rem;
+  width: 4.9rem;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__placeholder {
@@ -21,31 +23,31 @@
 
 .select2-container--default .select2-selection--multiple,
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-  border-radius: 8px;
+  border-radius: 0.8rem;
   border-color: #e6e9ed;
 }
 
 .select2-container .select2-selection--multiple {
-  min-height: 51px;
+  min-height: 5.1rem;
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
-  height: 26px;
-  line-height: 26px;
-  margin-top: 12px;
-  margin-right: 12px;
-  padding-right: 10px;
-  padding-left: 10px;
+  height: 2.6rem;
+  line-height: 2.6rem;
+  margin-top: 1.2rem;
+  margin-right: 1.2rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
   border: none;
-  border-radius: 26px;
-  font-size: 11px;
+  border-radius: 2.6rem;
+  font-size: 1.1rem;
   text-transform: uppercase;
   background: @blue;
   color: #fff;
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
-  margin-right: 8px;
+  margin-right: 0.8rem;
   color: #fff;
 }
 
@@ -54,21 +56,21 @@
 }
 
 .select2-container .select2-search--inline .select2-search__field {
-  line-height: 29px;
-  height: 29px;
-  margin-top: 10px;
+  line-height: 2.9rem;
+  height: 2.9rem;
+  margin-top: 1rem;
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__rendered {
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-bottom: 12px;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  padding-bottom: 1.2rem;
   vertical-align: top;
 }
 
 .select2-dropdown {
   overflow: hidden;
-  border-radius: 8px;
+  border-radius: 0.8rem;
   border-color: #e6e9ed;
 }
 
@@ -77,7 +79,7 @@
 }
 
 .select2-results__option {
-  padding: 8px 20px;
+  padding: 0.8rem 2rem;
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
@@ -94,9 +96,9 @@
   display: inline;
   padding: 0;
   margin: 0;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-transform: initial;
-  line-height: 34px;
+  line-height: 3.4rem;
   background: none;
   color: @black;
 
@@ -113,7 +115,7 @@
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
   border-color: #e6e9ed;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   outline: none;
 }
 
