--- a/sources/less/includes/tabs.less
+++ b/sources/less/includes/tabs.less
@@ -3,9 +3,9 @@
   overflow: hidden;
   line-height: 1;
   border: 1px solid @gray;
-  font-size: 13px;
+  font-size: 1.3rem;
   color: @blue;
-  border-radius: 8px;
+  border-radius: 0.8rem;
 
   input[type=radio] {
     display: none;
@@ -25,8 +25,8 @@
 .tabs__item {
   float: left;
   box-sizing: border-box;
-  min-width: 70px;
-  padding: 10px 15px;
+  min-width: 7rem;
+  padding: 1rem 1.5rem;
   text-align: center;
   border-right: 1px solid @gray;
   cursor: pointer;
