--- a/sources/less/includes/title.less
+++ b/sources/less/includes/title.less
@@ -1,11 +1,13 @@
 .title {
+  position: relative;
+  z-index: 1;
   line-height: 1;
   margin: 0;
   font-weight: normal;
-  font-size: 24px;
+  font-size: 2.4rem;
 }
 
 .title_size_md {
   font-weight: bold;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
