--- a/sources/less/includes/add_users.less
+++ b/sources/less/includes/add_users.less
@@ -1,17 +1,17 @@
 .add-users {
   box-sizing: border-box;
-  padding-top: 170px;
+  padding-top: 17rem;
   text-align: center;
   background: url('../img/add_users.png') top center no-repeat;
 
   .button {
-    min-width: 200px;
+    min-width: 20rem;
   }
 }
 
 .add-users__title {
-  margin: 0 0 40px;
+  margin: 0 0 4rem;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 2rem;
   color: @gray;
 }
