--- a/sources/less/includes/base.less
+++ b/sources/less/includes/base.less
@@ -1,10 +1,17 @@
-html,
+html {
+  font-size: 10px;
+}
+
 body {
-  height: 100%;
-  font-size: 15px;
+  font-size: 1.5rem;
   font-family: OpenSans, sans-serif;
   background: #fff;
   color: @black;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 a {
@@ -31,7 +38,7 @@ select {
 
 p {
   line-height: 1.5;
-  margin: 0 0 20px;
+  margin: 0 0 2.rem;
 }
 
 .hide_sm {
