--- a/sources/less/includes/chart.less
+++ b/sources/less/includes/chart.less
@@ -1,5 +1,5 @@
 .chart__plot {
-  margin: 0 0 30px;
+  margin: 0 0 3rem;
 }
 
 .chart__description {
@@ -9,10 +9,10 @@
 .chart__legend {
   display: inline-block;
   vertical-align: middle;
-  height: 10px;
-  width: 10px;
-  margin: 0 5px 0 0;
-  border-radius: 10px;
+  height: 1rem;
+  width: 1rem;
+  margin: 0 0.5rem 0 0;
+  border-radius: 1rem;
 }
 
 .chart__legend_blue {
