--- a/sources/less/includes/chart_panel.less
+++ b/sources/less/includes/chart_panel.less
@@ -2,10 +2,7 @@
   &:extend(.panel);
 }
 
-.chart-panel__header {
-  margin: 0 0 40px;
-}
-
+.chart-panel__header,
 .chart-panel__data {
-  margin: 0 0 40px;
+  margin: 0 0 4rem;
 }
