--- a/sources/less/includes/checkbox.less
+++ b/sources/less/includes/checkbox.less
@@ -1,6 +1,6 @@
 .checkbox {
   display: block;
-  margin: 0 0 18px;
+  margin: 0 0 1.8rem;
   white-space: nowrap;
   cursor: pointer;
 
@@ -20,14 +20,14 @@
 .checkbox__ctrl {
   display: inline-block;
   vertical-align: middle;
-  width: 24px;
-  height: 24px;
-  margin: 0 15px 0 0;
+  width: 2.4rem;
+  height: 2.4rem;
+  margin: 0 1.5rem 0 0;
   background: data-uri('../img/checkbox.png') center center no-repeat;
 }
 
 .checkbox__ctrl_space_sm {
-  margin-right: 5px;
+  margin-right: 0.5rem;
 }
 
 .checkbox__label {
