--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -1,7 +1,7 @@
 .field {
   position: relative;
   z-index: 0;
-  margin: 0 0 20px;
+  margin: 0 0 2rem;
 
   &:after {
     content: '';
@@ -14,13 +14,13 @@
   }
 
   .tabs {
-    font-size: 15px;
+    font-size: 1.5rem;
     border-color: #e6e9ed;
   }
 
   .tabs__item {
-    padding-top: 17px;
-    padding-bottom: 17px;
+    padding-top: 1.7rem;
+    padding-bottom: 1.7rem;
     border-color: #e6e9ed;
   }
 }
@@ -32,7 +32,7 @@
   .field__section {
     display: table-cell;
     vertical-align: middle;
-    padding: 0 10px;
+    padding: 0 1rem;
 
     &:first-child {
       padding-left: 0!important;
@@ -53,7 +53,7 @@
     }
 
     .field__section {
-      padding-bottom: 10px;
+      padding-bottom: 1rem;
     }
   }
 }
@@ -62,30 +62,30 @@
   width: auto;
 
   .field__section {
-    padding: 0 20px;
+    padding: 0 2rem;
   }
 
   .field__row {
     .field__section {
-      padding-bottom: 20px;
+      padding-bottom: 2rem;
     }
   }
 }
 
 .field_md {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .field__data {
   box-sizing: border-box;
   width: 100%;
-  height: 50px;
-  line-height: 48px;
-  padding: 0 20px;
+  height: 5rem;
+  line-height: 4.8rem;
+  padding: 0 2rem;
   margin: 0;
   border: 1px solid #e6e9ed;
-  border-radius: 8px;
-  box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+  border-radius: 0.8rem;
+  box-shadow: inset 0 0 0.5rem rgba(0,0,0,0.05);
   color: @black;
 
   &::-webkit-input-placeholder { /* Chrome */
@@ -105,12 +105,12 @@
 }
 
 .field__data_md {
-  height: 36px;
-  line-height: 34px;
+  height: 3.6rem;
+  line-height: 3.4rem;
 }
 
 .field__data_copy {
-  padding-right: 100px;
+  padding-right: 10rem;
 }
 
 .field__data_select-group {
@@ -118,15 +118,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding-right: 30px;
-  font-size: 14px;
+  padding-right: 3rem;
+  font-size: 1.4rem;
   box-shadow: none;
 
   .icon_cursor {
     position: absolute;
-    right: 10px;
+    right: 1rem;
     top: 50%;
-    margin-top: -4.5px;
+    margin-top: -0.45rem;
   }
 }
 
@@ -135,13 +135,13 @@
 }
 
 .field__hint {
-  margin: 5px 0 0;
-  font-size: 12px;
+  margin: 0.5rem 0 0;
+  font-size: 1.2rem;
   color: @gray;
 }
 
 .field__section_label {
-  font-size: 14px;
+  font-size: 1.4rem;
   color: @gray;
 }
 
@@ -150,10 +150,10 @@
   z-index: 1;
   right: 0;
   top: 0;
-  height: 50px;
-  line-height: 50px;
-  padding: 0 20px;
-  font-size: 14px;
+  height: 5rem;
+  line-height: 5rem;
+  padding: 0 2rem;
+  font-size: 1.4rem;
   color: @gray;
   cursor: pointer;
 }
