--- a/sources/less/includes/header.less
+++ b/sources/less/includes/header.less
@@ -1,15 +1,15 @@
 .header {
   position: relative;
   z-index: 3;
-  padding: 0 30px;
+  padding: 0 3rem;
   background: #fff;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.025);
+  box-shadow: 0 0.3rem 0.6rem rgba(0,0,0,0.025);
 }
 
 .header__inner {
   display: table;
   width: 100%;
-  height: 80px;
+  height: 8rem;
 }
 
 .header__section {
@@ -32,7 +32,7 @@
 
 .header__section_user {
   text-align: right;
-  font-size: 14px;
+  font-size: 1.4rem;
 
 
   @media (max-width: 1279px) {
@@ -43,11 +43,11 @@
     opacity: 0;
     box-sizing: border-box;
     width: 100%;
-    padding: 20px 30px 0;
+    padding: 2rem 3rem 0;
     border-top: 1px solid #f8fafb;
-    font-size: 16px;
+    font-size: 1.6rem;
     text-align: left;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.1);
+    box-shadow: 0 0.2rem 0.2rem rgba(0,0,0,0.1);
     background: #fff;
     transition: opacity 0.2s ease, left 0s linear 0.2s;
 
@@ -62,7 +62,7 @@
 
       .inline__item {
         display: block;
-        margin: 0 0 20px;
+        margin: 0 0 2rem;
         padding: 0;
       }
     }
@@ -77,7 +77,7 @@
   }
 
   .logout-button {
-    margin-left: -30px;
-    margin-right: -43px;
+    margin-left: -3rem;
+    margin-right: -3rem;
   }
 }
