--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -26,8 +26,8 @@
 }
 
 .icon_settings {
-  width: 32px;
-  height: 32px;
+  width: 3.2rem;
+  height: 3.2rem;
 
   &:after {
     background-image: data-uri('../img/icon_settings.png');
@@ -35,8 +35,8 @@
 }
 
 .icon_plus {
-  width: 14px;
-  height: 14px;
+  width: 1.4rem;
+  height: 1.4rem;
 
   &:after {
     background-image: data-uri('../img/icon_plus.png');
@@ -44,8 +44,8 @@
 }
 
 .icon_plus-blue {
-  width: 14px;
-  height: 14px;
+  width: 1.4rem;
+  height: 1.4rem;
 
   &:after {
     background-image: data-uri('../img/icon_plus_blue.png');
@@ -53,8 +53,8 @@
 }
 
 .icon_tooltip {
-  width: 18px;
-  height: 18px;
+  width: 1.8rem;
+  height: 1.8rem;
 
   &:after {
     background-image: data-uri('../img/icon_tooltip.png');
@@ -62,8 +62,8 @@
 }
 
 .icon_apple {
-  width: 14px;
-  height: 18px;
+  width: 1.4rem;
+  height: 1.8rem;
 
   &:after {
     background-image: data-uri('../img/icon_apple.png');
@@ -83,8 +83,8 @@
 }
 
 .icon_android {
-  width: 15px;
-  height: 17px;
+  width: 1.5rem;
+  height: 1.7rem;
 
   &:after {
     background-image: data-uri('../img/icon_android.png');
@@ -104,8 +104,8 @@
 }
 
 .icon_web {
-  width: 18px;
-  height: 18px;
+  width: 1.8rem;
+  height: 1.8rem;
 
   &.icon_white {
     &:after {
@@ -121,8 +121,8 @@
 }
 
 .icon_cursor {
-  width: 9px;
-  height: 9px;
+  width: 0.9rem;
+  height: 0.9rem;
 }
 
 .icon_cursor_right {
@@ -138,16 +138,16 @@
 }
 
 .icon_set-default {
-  width: 24px;
-  height: 24px;
+  width: 2.4rem;
+  height: 2.4rem;
   background: #e7eaec;
   color: #fff;
-  border-radius: 24px;
+  border-radius: 2.4rem;
   text-align: center;
 
   &:after {
     content: '×';
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
   }
 }
