--- a/sources/less/includes/progress_bar.less
+++ b/sources/less/includes/progress_bar.less
@@ -1,10 +1,10 @@
 .progress-bar {
-  height: 2px;
+  height: 0.2rem;
   background: #2f3844;
 }
 
 .progress-bar__indicator {
-  height: 2px;
+  height: 0.2rem;
   width: 25%;
   background: @green;
   background: linear-gradient(to right, @green 0%, @blue 100%);
