--- a/sources/less/includes/sidebar.less
+++ b/sources/less/includes/sidebar.less
@@ -1,16 +1,16 @@
 .sidebar {
-  width: 260px;
+  width: 26rem;
   height: 100%;
-  padding: 0 0 100px;
+  padding: 0 0 10rem;
 
   .menu {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: -3rem;
+    margin-right: -3rem;
   }
 }
 
 .sidebar__section {
-  padding: 30px;
+  padding: 3rem;
   border-bottom: 1px solid #eff4f6;
 
   &:last-child {
@@ -19,8 +19,8 @@
 }
 
 .sidebar__title {
-  margin: 0 0 10px;
-  font-size: 12px;
+  margin: 0 0 1rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
   color: @gray;
 }
@@ -29,5 +29,5 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0 0 20px 30px;
+  padding: 0 0 2rem 3rem;
 }
