--- a/sources/less/includes/tags.less
+++ b/sources/less/includes/tags.less
@@ -1,13 +1,13 @@
 .tags__item {
   display: inline-block;
   box-sizing: border-box;
-  height: 26px;
-  line-height: 26px;
-  margin: 0 0 10px;
-  padding: 0 15px;
+  height: 2.6rem;
+  line-height: 2.6rem;
+  margin: 0 0 1rem;
+  padding: 0 1.5rem;
   border: 1px solid @blue;
-  border-radius: 26px;
-  font-size: 11px;
+  border-radius: 2.6rem;
+  font-size: 1.1rem;
   text-transform: uppercase;
   cursor: pointer;
 
@@ -18,7 +18,7 @@
 
 .tags__item_active {
   position: relative;
-  padding-right: 27px;
+  padding-right: 2.7rem;
   background: @blue;
   color: #fff;
 
@@ -26,8 +26,8 @@
     content: '×';
     position: absolute;
     top: 0;
-    right: 10px;
-    font-size: 14px;
+    right: 1rem;
+    font-size: 1.4rem;
     opacity: 0.7;
   }
 }
