--- a/sources/less/includes/tooltip.less
+++ b/sources/less/includes/tooltip.less
@@ -19,10 +19,10 @@
   opacity: 0;
   transform: translateX(-50%);
   line-height: 1.5;
-  margin: 0 0 10px;
-  padding: 5px 25px;
-  border-radius: 8px;
-  font-size: 13px;
+  margin: 0 0 1rem;
+  padding: 0.5rem 2.5rem;
+  border-radius: 0.8rem;
+  font-size: 1.3rem;
   font-weight: normal;
   text-align: center;
   white-space: nowrap;
@@ -35,11 +35,11 @@
     position: absolute;
     top: 100%;
     left: 50%;
-    margin: 0 0 0 -5px;
+    margin: 0 0 0 -0.5rem;
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 5px 5px 0 5px;
+    border-width: 0.5rem 0.5rem 0 0.5rem;
     border-color: @black transparent transparent transparent;
   }
 }
