--- a/sources/less/includes/user_pick.less
+++ b/sources/less/includes/user_pick.less
@@ -3,11 +3,11 @@
   vertical-align: middle;
   border-radius: 100%;
   overflow: hidden;
-  width: 36px;
-  height: 36px;
+  width: 3.6rem;
+  height: 3.6rem;
 }
 
 .pick_app {
-  width: 50px;
-  height: 50px;
+  width: 5rem;
+  height: 5rem;
 }
