Исправлена верстка поля фильтрации

--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -58,7 +58,8 @@
   color: @blue;
   box-shadow: none;
 
-  &:hover {
+  &:hover,
+  .popover_active & {
     background: @blue;
     color: #fff;
 
