Добавлна колонка в таблцу apps

--- a/sources/less/includes/apps_table.less
+++ b/sources/less/includes/apps_table.less
@@ -78,7 +78,7 @@
 }
 
 .apps-grid__section_name {
-  width: 40%;
+  width: 30%;
 }
 
 .apps-grid__section_placement {
@@ -86,11 +86,15 @@
 }
 
 .apps-grid__section_placement_full {
-  width: 50%;
+  width: 99%;
 }
 
 .apps-grid__section_id {
   width: 15%;
+}
+
+.apps-grid__section_type {
+  width: 12%;
 }
 
 .apps-grid__section_integration {
@@ -98,7 +102,7 @@
 }
 
 .apps-grid__section_status {
-  width: 10%;
+  width: 8%;
 }
 
 .apps-grid__section_count {
