Исправлна верстка настроек на странице analytics

--- a/sources/less/includes/inline.less
+++ b/sources/less/includes/inline.less
@@ -45,6 +45,12 @@
   white-space: nowrap;
 }
 
+.inline_vat {
+  .inline__item {
+    vertical-align: top;
+  }
+}
+
 .inline_table {
   display: table;
   width: 100%;
