--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -40,6 +40,8 @@
 }
 
 .panel_settings {
+  padding: 1.5rem;
+
   .panel__title {
     margin-bottom: 1.5rem;
   }
@@ -49,7 +51,7 @@
   }
 
   .checkbox {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
   }
 
   .checkbox__ctrl {
