--- a/sources/less/includes/inline.less
+++ b/sources/less/includes/inline.less
@@ -66,10 +66,10 @@
   padding: 1.3rem;
 
   &:first-child {
-    margin-left: 0!important;
+    padding-left: 0!important;
   }
 
   &:last-child {
-    margin-right: 0!important;
+    padding-right: 0!important;
   }
 }
