--- a/sources/less/includes/pan.less
+++ b/sources/less/includes/pan.less
@@ -11,3 +11,11 @@
 .pan__section_right {
   text-align: right;
 }
+
+.pan__section_left {
+  text-align: left;
+}
+
+.pan__section_center {
+  text-align: center;
+}
