--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -40,7 +40,7 @@
 }
 
 .panel_settings {
-  padding: 1.5rem;
+  padding: 2rem 3rem;
 
   .panel__title {
     margin-bottom: 1.5rem;
@@ -74,6 +74,7 @@
 }
 
 .panel__footer {
+  position: relative;
   margin: 2.5rem -3rem -2.5rem;
   padding: 2.5rem 3rem;
   border-radius: 0 0 0.7rem 0.7rem;
