Исправлена верстка календаря

--- a/sources/less/includes/daterange.less
+++ b/sources/less/includes/daterange.less
@@ -68,7 +68,7 @@
 .daterange__footer {
   position: relative;
   height: 8rem;
-  border-radius: 0 0 0.8rem;
+  border-radius: 0 0 0.8rem 0.8rem;
   background: #f8fafb;
 }
 
