--- a/sources/less/includes/daterange.less
+++ b/sources/less/includes/daterange.less
@@ -1,120 +1,235 @@
-.daterange {
-  .panel {
-    padding: 0;
-  }
-}
+.daterangepicker {
+  position: absolute;
+  margin: 1rem 0 0;
+  display: none;
+  z-index: 9999;
+  border-radius: 0.8rem;
+  box-shadow: 0 0 3rem rgba(0,0,0,0.1);
+  background-color: #fff;
+  color: @black;
 
-.daterange_extra {
-  .daterange__list {
-    padding-left: 30rem;
-    padding-right: 30rem;
-  }
+  &.show-calendar {
+    .ranges {
+      ul {
+        padding-left: 27rem;
+        padding-right: 27rem;
+      }
+    }
 
-  .daterange__date-start,
-  .daterange__date-end,
-  .daterange__cancel,
-  .daterange__dates {
-    opacity: 1;
-    z-index: 0;
-    transition: opacity 0.5s ease, z-index 0s linear 0s;
-  }
-
-  .daterange__submit {
-    .button {
+    .applyBtn {
       width: 8rem;
     }
-  }
-}
 
-.daterange__list {
-  width: 14rem;
-  padding: 3rem 4rem 3rem;
-  transition: padding 0.5s ease;
 
-  .button {
-    display: block;
-    width: 100%;
-    padding: 0;
-    height: 2.8rem;
-    margin: 0 0 1rem;
-    font-weight: normal;
-    font-size: 1.1rem;
-    border-radius: 100px;
 
-    &:last-child {
-      margin-bottom: 0;
+    .cancelBtn,
+    .calendar .calendar-table,
+    .calendar .daterangepicker_input {
+      opacity: 1;
+      z-index: 0;
+      transition: opacity 0.5s ease, z-index 0s linear 0s;
     }
   }
-}
 
-.daterange__date-start,
-.daterange__date-end {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-  transition: opacity 0.5s ease, z-index 0s linear 0.5s;
-}
+  .ranges {
+    ul {
+      width: 14rem;
+      margin: 0;
+      padding: 2.7rem 4rem 2.2rem;
+      list-style-type: none;
+      transition: all 0.5s ease;
+    }
 
-.daterange__date-start {
-  top: 3rem;
-  left: 3rem;
-}
+    li {
+      box-sizing: border-box;
+      border-radius: 2.6rem;
+      height: 2.6rem;
+      line-height: 2.4rem;
+      padding: 0;
+      margin: 0 0 1rem;
+      text-align: center;
+      font-size: 11px;
+      text-transform: uppercase;
+      border: 1px solid @blue;
+      background: #fff;
+      cursor: pointer;
+      transition: all 0.2s ease;
 
-.daterange__date-end {
-  top: 3rem;
-  right: 3rem;
-}
+      &:last-child {
+        margin-bottom: 0;
+      }
 
-.daterange__footer {
-  position: relative;
-  height: 8rem;
-  border-radius: 0 0 0.8rem 0.8rem;
-  background: #f8fafb;
-}
+      &.active,
+      &:hover {
+        background:@blue;
+        color: #fff;
+      }
+    }
+  }
 
-.daterange__cancel {
-  position: absolute;
-  left: 4rem;
-  top: 50%;
-  margin-top: -0.5em;
-  opacity: 0;
-  z-index: -1;
-  transition: opacity 0.5s ease, z-index 0s linear 0.5s;
-}
+  .range_inputs {
+    position: relative;
+    box-sizing: border-box;
+    height: 8.5rem;
+    padding: 2.2rem 4rem;
+    background: #f8fafb;
+  }
 
-.daterange__dates {
-  position: absolute;
-  left: 50%;
-  top: 2rem;
-  width: 31rem;
-  margin-left: -15.5rem;
-  opacity: 0;
-  z-index: -1;
-  transition: opacity 0.5s ease, z-index 0s linear 0.5s;
-
-  .field {
-    display: inline-block;
-    vertical-align: middle;
+  .applyBtn {
+    position: absolute;
+    right: 4rem;
+    bottom: 2rem;
     width: 14rem;
+    height: 4rem;
+    line-height: 4rem;
+    padding: 0 1.5rem;
     margin: 0;
+    text-align: center;
+    border-radius: 0.8rem;
+    border: none;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: @blue;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.2s ease;
+
+    &:hover {
+      background: #17a7ec;
+      color: #fff;
+    }
   }
 
-  .field__data {
-    height: 4rem;
-    line-height: 3.8rem;
-  }
-}
-
-.daterange__submit {
-  position: absolute;
-  right: 4rem;
-  top: 50%;
-  margin-top: -2rem;
-
-  .button {
-    height: 4rem;
-    width: 14rem;
+  .cancelBtn {
+    position: absolute;
+    top: 50%;
+    left: 4rem;
+    z-index: -1;
+    opacity: 0;
     padding: 0;
-    transition: width 0.5s ease;
+    margin: -0.5em 0 0;
+    border: none;
+    text-decoration: underline;
+    background: none;
+    cursor: pointer;
+    color: @blue;
+    transition: opacity 0.5s ease, z-index 0s linear 0.5s;
+  }
+
+  .calendar {
+    &.left {
+      .calendar-table {
+        left: 2.3rem;
+      }
+
+      .daterangepicker_input {
+        right: 50%;
+        padding-right: 1rem;
+      }
+    }
+
+    &.right {
+      .calendar-table {
+        right: 2.3rem;
+      }
+
+      .daterangepicker_input {
+        left: 50%;
+        padding-left: 1rem;
+      }
+    }
+
+    .calendar-table {
+      position: absolute;
+      top: 1.5rem;
+      z-index: -1;
+      opacity: 0;
+      transition: opacity 0.5s ease, z-index 0s linear 0.5s;
+
+      table {
+        border-collapse: collapse;
+      }
+
+      td,
+      th {
+        width: 3.2rem;
+        height: 3.2rem;
+        padding: 0;
+        font-size: 1.5rem;
+        text-align: center;
+
+        &.off {
+          color: #b5bdc9;
+        }
+
+        &.in-range {
+          background: #f1f6f8;
+        }
+
+        &.start-date,
+        &.end-date {
+          background: @blue;
+          color: #fff;
+        }
+
+        &.start-date {
+          border-radius: 3rem 0 0 3rem;
+        }
+
+        &.end-date {
+          border-radius: 0 3rem 3rem 0;
+        }
+
+        &.start-date.end-date {
+          border-radius: 3rem;
+        }
+
+        &.available {
+          cursor: pointer;
+        }
+      }
+
+      th {
+        text-transform: uppercase;
+        color: @blue;
+
+        &.month {
+          text-transform: initial;
+          color: @black;
+          font-weight: bold;
+        }
+
+        &.prev {
+          background: data-uri('../img/icon_cursor_left.png') center center no-repeat;
+          cursor: pointer;
+        }
+
+        &.next {
+          background: data-uri('../img/icon_cursor_right.png') center center no-repeat;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .daterangepicker_input {
+      position: absolute;
+      bottom: 2rem;
+      z-index: -1;
+      opacity: 0;
+      transition: opacity 0.5s ease, z-index 0s linear 0.5s;
+
+      input {
+        height: 4rem;
+        width: 14rem;
+        padding: 0;
+        margin: 0;
+        border-radius: 0.8rem;
+        border: 1px solid #e6e9ed;
+        font-size: 1.4rem;
+        text-align: center;
+        box-shadow: inset 0 0 0.5rem rgba(0,0,0,0.05);
+      }
+    }
   }
 }
