Добавлн блок get started

--- a/sources/less/includes/get_started_progress.less
+++ b/sources/less/includes/get_started_progress.less
@@ -25,3 +25,11 @@
 .get-started-progress__status {
   margin-top: 1.3rem;
 }
+
+.get-started {
+  width: 40rem;
+
+  .checkbox__label {
+    font-weight: 500;
+  }
+}
