--- a/sources/less/includes/checkbox.less
+++ b/sources/less/includes/checkbox.less
@@ -35,3 +35,10 @@
   vertical-align: middle;
   color: @black;
 }
+
+.checkbox__hint {
+  line-height: 1.3;
+  padding: 0 0 0 4.25rem;
+  white-space: normal;
+  color: @gray;
+}
