--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -2,6 +2,7 @@
   padding: 2.5rem 3rem;
   border-radius: 0.8rem;
   box-shadow: 0 0 0.5rem rgba(0,0,0,0.15);
+  text-align: left;
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: bottom right;
