--- a/sources/less/includes/get_started_progress.less
+++ b/sources/less/includes/get_started_progress.less
@@ -1,7 +1,7 @@
 .get-started-progress {
   display: inline-block;
   vertical-align: top;
-  height: 8rem;
+  height: 7.2rem;
   padding: 0 2rem;
   line-height: 1;
   font-size: 1.2rem;
@@ -19,7 +19,7 @@
 }
 
 .get-started-progress__title {
-  margin-top: 3.5rem;
+  margin-top: 2.5rem;
 }
 
 .get-started-progress__status {
@@ -27,6 +27,7 @@
 }
 
 .get-started {
+  font-size: 1.4rem;
   width: 40rem;
 
   .checkbox__label {
