Добавлна страница promote dashboard

--- a/sources/less/includes/content.less
+++ b/sources/less/includes/content.less
@@ -36,7 +36,8 @@
 
       .menu-item__label,
       .sidebar__title,
-      .sidebar__copy {
+      .sidebar__copy,
+      .menu-item__action {
         opacity: 1;
       }
 
@@ -49,7 +50,8 @@
 
     .menu-item__label,
     .sidebar__title,
-    .sidebar__copy {
+    .sidebar__copy,
+    .menu-item__action {
       opacity: 0;
       transition: opacity 0.2s ease;
     }
