--- a/sources/less/includes/menu.less
+++ b/sources/less/includes/menu.less
@@ -101,6 +101,14 @@
   }
 }
 
+.menu-item__action {
+  margin: 3rem 3rem 0 -4rem;
+
+  .button {
+    display: block;
+  }
+}
+
 .sub-menu {
   overflow: hidden;
   margin-left: -7rem;
