--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -36,6 +36,22 @@
   background-image: data-uri('../img/panel_users.png');
 }
 
+.panel_campaings {
+  background-image: data-uri('../img/panel_campaings.png');
+}
+
+.panel_sources {
+  background-image: data-uri('../img/panel_sources.png');
+}
+
+.panel_reached {
+  background-image: data-uri('../img/panel_reached.png');
+}
+
+.panel_goals {
+  background-image: data-uri('../img/panel_goals.png');
+}
+
 .panel_popover {
   box-shadow: 0 0 3rem rgba(0,0,0,0.1);
 }
