--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 1rem 1.8rem;
   text-transform: uppercase;
+  text-align: center;
   border: 1px solid transparent;
   border-radius: 0.5rem;
   white-space: nowrap;
