--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -38,17 +38,16 @@
   width: 1.4rem;
   height: 1.4rem;
 
-  &:after {
-    background-image: data-uri('../img/icon_plus.png');
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_plus.png');
+    }
   }
-}
 
-.icon_plus-blue {
-  width: 1.4rem;
-  height: 1.4rem;
-
-  &:after {
-    background-image: data-uri('../img/icon_plus_blue.png');
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_plus_blue.png');
+    }
   }
 }
 
@@ -137,6 +136,24 @@
   }
 }
 
+.icon_export {
+  width: 1.2rem;
+  height: 1.4rem;
+
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_export_white.png');
+    }
+  }
+
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_export_blue.png');
+    }
+  }
+}
+
+
 .icon_set-default {
   width: 2.4rem;
   height: 2.4rem;
@@ -151,3 +168,4 @@
     line-height: 2.4rem;
   }
 }
+
