--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -146,3 +146,20 @@
     }
   }
 }
+
+.select-small-wrapper {
+  .select2-container--default {
+    .select2-selection__rendered {
+      line-height: 3.5rem;
+    }
+
+    .select2-selection {
+      height: 3.7rem;
+    }
+
+    .select2-selection__arrow {
+      height: 3.5rem;
+      width: 3.7rem;
+    }
+  }
+}
