Добавлна страница Cohort Reporting

--- a/sources/less/includes/inline.less
+++ b/sources/less/includes/inline.less
@@ -1,13 +1,11 @@
 .inline {
   display: inline-block;
   vertical-align: middle;
-  margin-top: -1.3rem;
-  margin-bottom: -1.3rem;
+  margin: -1.3rem;
 }
 
 .inline_size_xs {
-  margin-top: -0.2rem;
-  margin-bottom: -0.2rem;
+  margin: -0.2rem;
 
   .inline__item {
     padding: 0.2rem;
@@ -15,8 +13,7 @@
 }
 
 .inline_size_sm {
-  margin-top: -0.4rem;
-  margin-bottom: -0.4rem;
+  margin: -0.4rem;
 
   .inline__item {
     padding: 0.4rem;
@@ -24,8 +21,7 @@
 }
 
 .inline_size_md {
-  margin-top: -0.8rem;
-  margin-bottom: -0.8rem;
+  margin: -0.8rem;
 
   .inline__item {
     padding: 0.8rem;
@@ -33,8 +29,7 @@
 }
 
 .inline_size_lg {
-  margin-top: -2rem;
-  margin-bottom: -2rem;
+  margin: -2rem;
 
   .inline__item {
     padding: 2rem;
@@ -64,12 +59,4 @@
   display: inline-block;
   vertical-align: middle;
   padding: 1.3rem;
-
-  &:first-child {
-    padding-left: 0!important;
-  }
-
-  &:last-child {
-    padding-right: 0!important;
-  }
 }
