Добавлна страницы billing

--- a/sources/less/includes/popup.less
+++ b/sources/less/includes/popup.less
@@ -1,6 +1,6 @@
 .popup {
   position: fixed;
-  z-index: 9999;
+  z-index: 999;
   top: 0;
   left: -100%;
   width: 100%;
@@ -26,4 +26,10 @@
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+}
+
+.popup__close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
