--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -93,8 +93,8 @@
 }
 
 .button_submit {
-  padding-left: 5.5rem;
-  padding-right: 5.5rem;
+  padding: 1.7rem 5.5rem;
+  font-size: 1.4rem;
 }
 
 .button_small {
@@ -114,12 +114,6 @@
 .button_sm {
   padding: 0.9rem 2rem;
   font-size: 1.2rem;
-}
-
-.button_md {
-  padding-top: 1.7rem;
-  padding-bottom: 1.7rem;
-  font-size: 1.4rem;
 }
 
 .button__text {
