--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -153,7 +153,6 @@
   }
 }
 
-
 .icon_set-default {
   width: 2.4rem;
   height: 2.4rem;
@@ -169,3 +168,11 @@
   }
 }
 
+.icon_close {
+  width: 3rem;
+  height: 3rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_close.png');
+  }
+}
