--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -101,6 +101,19 @@
   }
 }
 
+.menu-icon_billing {
+  width: 2.2rem;
+  height: 2.25rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_billing_gray.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_billing_blue.png');
+  }
+}
+
 .menu-icon_attribution {
   &:after {
     background-image: data-uri('../img/icon_attribution_gray.png');
