--- a/sources/less/includes/get_started_progress.less
+++ b/sources/less/includes/get_started_progress.less
@@ -1,3 +1,7 @@
+.get-started {
+  margin-right: -3rem;
+}
+
 .get-started-progress {
   display: inline-block;
   vertical-align: top;
@@ -26,7 +30,7 @@
   margin-top: 1.3rem;
 }
 
-.get-started {
+.get-started-container {
   font-size: 1.4rem;
   width: 40rem;
 
