--- a/sources/less/includes/progress_bar.less
+++ b/sources/less/includes/progress_bar.less
@@ -5,7 +5,8 @@
 
 .progress-bar__indicator {
   height: 0.2rem;
-  width: 25%;
+  width: 0%;
   background: @green;
   background: linear-gradient(to right, @green 0%, @blue 100%);
+  transition: width 0.2s ease;
 }
