--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   line-height: 1;
   margin: 0;
-  padding: 1rem 1.8rem;
+  padding: 1rem;
   text-transform: uppercase;
   text-align: center;
   border: 1px solid transparent;
@@ -11,7 +11,7 @@
   white-space: nowrap;
   text-decoration: none !important;
   font-weight: bold;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   box-shadow: 0 0 1rem rgba(0,0,0,0.15);
   background-color: transparent;
   cursor: pointer;
