--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -163,3 +163,97 @@
     }
   }
 }
+
+.select-tags-wrapper {
+  .select2-container--default {
+    &.select2-container--open {
+      .select2-selection {
+        &:after {
+          border-color: transparent transparent #888 transparent;
+          border-width: 0 4px 5px 4px;
+        }
+      }
+    }
+
+    .select2-selection {
+      height: 3.7rem;
+      min-height: auto;
+      padding: 0 3rem 0 2rem;
+      cursor: pointer;
+
+      &:after {
+        content: '';
+        position: absolute;
+        right: 1.5rem;
+        top: 50%;
+        height: 0;
+        width: 0;
+        margin-top: -2px;
+        border-style: solid;
+        border-color: #888 transparent transparent transparent;
+        border-width: 5px 4px 0 4px;
+      }
+    }
+
+    .select2-selection__rendered {
+      padding: 0;
+      margin: 0;
+    }
+
+    .select2-search__field {
+      height: 3.5rem;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+    }
+
+    .select2-selection__choice {
+      display: inline;
+      float: none;
+      margin: 0;
+      padding: 0;
+      line-height: 3.5rem;
+      font-size: 1.4rem;
+      text-transform: initial;
+      background: none;
+      color: @black;
+      cursor: pointer;
+
+      &:before {
+        content: ', ';
+      }
+
+      &:first-child {
+        &:before {
+          display: none;
+        }
+      }
+    }
+
+    .select2-selection__choice__remove {
+      display: none;
+    }
+
+    .select2-selection__choice + .select2-search--inline {
+      display: none;
+    }
+  }
+}
+
+.select2-dropdown {
+  .set-default {
+    padding: 1rem 2rem;
+    font-size: 1.3rem;
+    background: #f8fafb;
+    color: @gray;
+    cursor: pointer;
+
+    span {
+      vertical-align: middle;
+    }
+
+    .icon {
+      margin: 0 0.8rem 0 0;
+    }
+  }
+}
