Добавлна страница create/edit ad

--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -123,3 +123,13 @@
     background-image: data-uri('../img/icon_attribution_blue.png');
   }
 }
+
+.menu-icon_campaigns {
+  &:after {
+    background-image: data-uri('../img/icon_campaings_gray.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_campaings_blue.png');
+  }
+}
