--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -98,3 +98,16 @@
   background: #f8fafb;
   color: @gray;
 }
+
+.panel_creative {
+  position: relative;
+  max-width: 72rem;
+  margin: 0 auto;
+  padding-top: 5rem;
+
+  .title {
+    font-size: 2.4rem;
+    text-align: center;
+    margin: 0 0 5rem;
+  }
+}
