--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -49,3 +49,4 @@
 @import 'includes/add_users';
 @import 'includes/paggination';
 @import 'includes/payment_method';
+@import 'includes/creative_list';
