--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -1,3 +1,11 @@
+.fields {
+  margin: 0 0 2rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
 .field {
   position: relative;
   z-index: 0;
