--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -171,8 +171,18 @@
 .icon_close {
   width: 3rem;
   height: 3rem;
+  cursor: pointer;
 
   &:after {
     background-image: data-uri('../img/icon_close.png');
+  }
+}
+
+.icon_remove {
+  width: 1.1rem;
+  height: 1.4rem;
+
+  &:after {
+    background-image: data-uri('../img/icon_remove_gray.png');
   }
 }
